fixup! Repositioned margin spacing the clock display and time format.
       Moved the margin responsibility from the time format as a top margin to the clock display as a bottom margin for consistency.

       Explicitly set left and right margins on the ClockDisplay component, so that it doesn't override top and bottom margins set on it by custom styles.

--- a/src/components/clock-display/ClockDisplay.module.scss
+++ b/src/components/clock-display/ClockDisplay.module.scss
@@ -18,7 +18,8 @@
 
   // Fix annoying Firefox issue
   max-width: 270px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media (min-width: App.$layoutBreakpoint) {
