--- a/src/components/clock-features/time-clock/TimeClock.module.scss
+++ b/src/components/clock-features/time-clock/TimeClock.module.scss
@@ -29,8 +29,6 @@
     max-width: 23.5em;
 
     padding-left: .5em;
-
-    margin-top: 2em;
   }
 
   .timeFormat {
